--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "~0.10.0 || ~0.12.0 || ^4.2.0"
   },
   "dependencies": {
+    "accept-language": "^2.0.16",
     "bcryptjs": "2.3.0",
     "bluebird": "3.4.0",
     "body-parser": "1.15.1",
@@ -39,11 +40,13 @@
     "downsize": "0.0.8",
     "express": "4.13.4",
     "express-hbs": "1.0.1",
+    "express-session": "^1.13.0",
     "extract-zip": "1.5.0",
     "fs-extra": "0.30.0",
     "ghost-gql": "0.0.4",
     "glob": "5.0.15",
     "html-to-text": "2.1.0",
+    "i18n-2": "^0.6.3",
     "intl": "1.2.4",
     "intl-messageformat": "1.3.0",
     "jsonpath": "0.2.3",
@@ -51,11 +54,10 @@
     "lodash": "3.10.1",
     "lodash.tostring": "4.1.3",
     "moment": "2.13.0",
-    "moment-timezone": "0.5.4",
+    "moment-timezone": "0.5.1",
     "morgan": "1.7.0",
     "multer": "1.1.0",
     "netjet": "1.1.1",
-    "moment-timezone": "0.5.1",
     "node-uuid": "1.4.7",
     "nodemailer": "0.7.1",
     "oauth2orize": "1.3.0",
